<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/margin_10dp"
            android:layout_marginTop="@dimen/margin_10dp"
            android:text="@string/about"
            android:textColor="@color/black"
            android:textSize="@dimen/text_size_20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/bioButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/margin_30dp"
            android:layout_marginTop="@dimen/margin_10dp"
            android:clickable="true"
            android:text="@string/bio"
            android:textColor="@color/blue"
            android:textSize="@dimen/text_size_20sp" />

        <TextView
            android:id="@+id/addPrefrenceButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/margin_30dp"
            android:layout_marginTop="@dimen/margin_10dp"
            android:clickable="true"
            android:text="@string/addPrefrence"
            android:textColor="@color/blue"
            android:textSize="@dimen/text_size_20sp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="@dimen/margin_10dp"
            android:background="@color/grey" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/margin_10dp"
                android:layout_marginTop="@dimen/margin_10dp"
                android:text="@string/verification"
                android:textColor="@color/black"
                android:textSize="@dimen/text_size_20sp"
                android:textStyle="bold" />

            <ImageView
                android:id="@+id/editMenuButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_marginTop="@dimen/margin_10dp"
                android:src="@drawable/ic_edit_mail" />
        </RelativeLayout>
    </LinearLayout>
</ScrollView>