<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="10">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="6"
        android:scaleType="fitXY"
        android:src="@drawable/carpool" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_gravity="center"
        android:layout_weight="2"
        android:gravity="center"
        android:padding="@dimen/padding_10dp"
        android:text="@string/carpool_tag"
        android:textColor="@color/brown"
        android:textSize="@dimen/text_size_25sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/signup"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginLeft="@dimen/margin_10dp"
        android:layout_marginRight="@dimen/margin_10dp"
        android:layout_weight="1"
        android:background="@drawable/button_shape"
        android:padding="@dimen/padding_5dp"
        android:text="@string/signup"
        android:textColor="@color/white"
        android:textSize="@dimen/text_size_30sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/login"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginLeft="@dimen/margin_10dp"
        android:layout_marginRight="@dimen/margin_10dp"
        android:layout_marginBottom="@dimen/margin_10dp"
        android:layout_weight="1"
        android:background="@drawable/button_shape"
        android:padding="@dimen/padding_5dp"
        android:text="@string/login"
        android:textColor="@color/white"
        android:textSize="@dimen/text_size_30sp"
        android:textStyle="bold" />

</LinearLayout>